--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -7,7 +7,7 @@
     width: 100%;
     height: 60px;
     background-color: #ffffff;
-    z-index: 999999;
+    z-index: 10;
     border-bottom: 1px solid #efefef;
 }
 
@@ -79,7 +79,7 @@
     border-radius: 0 0 10px 10px;
     box-shadow: 0 4px 8px rgb(0 0 0 / 20%);
     color: #234126;
-    z-index: 1111111;
+    z-index: 10;
     flex-direction: column;
 
     .dropdownLink {
