--- a/src/components/homepage-films/film/film.module.scss
+++ b/src/components/homepage-films/film/film.module.scss
@@ -30,7 +30,6 @@
         width: 100%;
         height: auto;
         border-radius: 8px;
-        z-index: -1;
         object-fit: contain;
     }
 
