--- a/src/components/homepage-films/homepage-films.module.scss
+++ b/src/components/homepage-films/homepage-films.module.scss
@@ -26,7 +26,6 @@
     button {
         background-color: transparent;
         font-size: 20px;
-        z-index: 2;
         text-wrap: nowrap;
     }
 }
@@ -49,14 +48,13 @@
     min-width: 300px;
     border-radius: 5px;
     transition: transform 0.3s ease;
-    z-index: 1;
     cursor: pointer;
     flex-grow: 1;
     overflow: hidden;
 
     &:hover {
         box-shadow: rgb(0 0 0 / 15%) 1.95px 1.95px 2.6px;
-        z-index: 2;
+        z-index: 1;
         transform: scale(1.04) translateY(-1px);
     }
 }
@@ -87,7 +85,7 @@
     opacity: 1;
     font-size: 50px;
     color: #000000;
-    z-index: 10;
+    z-index: 2;
     align-self: stretch;
     cursor: pointer;
     transform: translateY(-53%);
@@ -96,7 +94,6 @@
         background-color: transparent;
         opacity: 1;
         color: #ffffff;
-        z-index: 16;
     }
 
     &.prevButton {
